src/z80asm/z80asm2/t/40-syntax/expected/align_01.txt
% z88dk-z80asm -v -dump-after-parse t/40-syntax//input/align_01.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Define constant: __FLOAT_GENMATH__ = 1
Assembling t/40-syntax/input/align_01.asm...
t/40-syntax/input/align_01.asm:1:6: error: Expression expected
    align
         ^
t/40-syntax/input/align_01.asm:2:1: error: Unterminated expression after "align"
    align ,
    ^
t/40-syntax/input/align_01.asm:4:13: error: Expected comma after alignment expression
    align 1+2*3 @
                ^
t/40-syntax/input/align_01.asm:5:12: error: Unterminated expression after ","
    align 1+2*3, 
               ^
t/40-syntax/input/align_01.asm:7:20: error: Unexpected token: "@"
    align 1+2*3, 2+3*4 @
                       ^
t/40-syntax/input/align_01.asm:8:19: error: Unexpected token: ","
    align 1+2*3, 2+3*4,
                      ^
Program
    AlignStmt
        Location: t/40-syntax/input/align_01.asm:3:1
        Alignment:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
        Filler byte:
            ExprLiteralInt: 0
    AlignStmt
        Location: t/40-syntax/input/align_01.asm:6:1
        Alignment:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 1
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 2
                        RHS:
                            ExprLiteralInt: 3
        Filler byte:
            ExprBinary: +
                LHS:
                    ExprLiteralInt: 2
                RHS:
                    ExprBinary: *
                        LHS:
                            ExprLiteralInt: 3
                        RHS:
                            ExprLiteralInt: 4
